Feat: Mas mejoras del mapa y logger